**feat(1114):** enhance coverage rendering, add boundary filtering, and improve UI/UX
- Add OSM boundary handling with `/api/v2/coverage/boundary/{osmId}` and filtering by map viewport.
- Update `CoverageController` with new endpoints for boundary data and filtered areas.
- Introduce hierarchical admin levels and tree panel UI with localized strings for coverage display.
- Add `osm_bounds` table in schema for efficient boundary storage and retrieval.
- Enhance front-end map interaction with real-time filtering, hover effects, and improved rendering logic.
- Refactor coverage.js for modularity, performance, and maintainability.
- Update coverage.html with new tree panel and improved layout.
- Add multilingual month labels and coverage admin levels to messages.properties.
- Revise coverage.css to support tree panel styles and dynamic interactions.
- Improve error handling for boundary geometry and admin level database queries.